# animedownloader

./: .gitignore  LICENSE  README.md  pyproject.toml
anime_autodownloader/: downloader.py  navigator.py
animedownloader/: __init__.py  downloader.py  utils.py
